...
                    <View style={styles.buttonContainer}>
                        <TouchableOpacity
                            testID={'welcome-button'}
                            style={styles.welcomeButton}
                            onPress={() => router.push("/homemap")}
                        >
                            <Text style={styles.welcomeButtonText}>GET STARTED</Text>
                        </TouchableOpacity>

                    </View>


                </ImageBackground>
...
