...
                />
                {inputText.length > 0 ? (
                    <TouchableOpacity testID={'clear-input-button'}  style={styles.closeButton} onPress={clearInput}>
                        <Ionicons name="close-circle" size={22} color={theme.colors.grayDark}/>
                    </TouchableOpacity>
                ) : (
                    <TouchableOpacity testID={'mic-button'} style={styles.micButton} onPress={startVoiceRecognition}>
                        <Ionicons
                            name={isListening ? "mic" : "mic-off"}
                            size={22}
                            color={isListening ? theme.colors.success : theme.colors.grayDark}
                        />
                    </TouchableOpacity>
...
