...
        } catch (error) {
            Alert.alert('Error', 'Failed to save task. Please try again.');
            console.error('Error in handleSaveEvent:', error);
        }
    };

    return (
        <Modal animationType="slide" transparent visible={isVisible} onRequestClose={onClose}>
            <View style={styles.createTaskModalContainer}>
                <View style={styles.createTaskBottomSheet}>
                    <TouchableOpacity testID={'close-button'} onPress={onClose} style={styles.createTaskCloseButton}>
                        <Ionicons name="close-circle" size={32} color={theme.colors.text}/>
                    </TouchableOpacity>
...
                    <View>
                        <TextInput
                            placeholderTextColor={theme.colors.inputPlaceholder}
                            style={styles.createTaskInput}
                            value={taskName}
                            onChangeText={setTaskName}
                            placeholder="Task Name"
                        />

                        <View style={styles.addressToggleContainer}>
                            <Text style={styles.createTaskLabel}>Address Input Method:</Text>
                            <View style={styles.toggleContainer}>
                                <TouchableOpacity 
...
                            onChangeText={setNotes}
                            placeholder="Add notes"
                            multiline
                        />

                        <TouchableOpacity style={styles.createTaskSaveButton} onPress={handleSaveEvent}>
                            <Text style={styles.createTaskSaveButtonText}>Create Event</Text>
                        </TouchableOpacity>
                    </View>
                </View>
            </View>
        </Modal>

...
