...
                mode: `${mode}`,
                alternatives: true,
                key: GOOGLE_MAPS_API_KEY
            }
        });

        if (response.data.status !== "OK") throw new Error(response.data.error_message);

        return response.data.routes.map(route => {
            const encoded = route.overview_polyline?.points;
            // Decode the polyline into an array of [lat, lng] pairs
            const decodedCoords = polyline.decode(encoded);
            // Convert to [lng, lat] order as required by GeoJSON
...
