...
                style={styles.googleAutoInput}
                value={inputText}
                onChangeText={(text) => {
                    setInputText(text);
                    debouncedFetchPredictions(text);
                }}
                placeholder="Enter Address"
                autoFocus={autoFocus} // Ensure input gets focus
            />

            {inputText.length > 0 && (
                <TouchableOpacity style={styles.googleAutoClearButton} testID={'clear-button'} onPress={handleClearInput}>
                    <Ionicons name="close-circle" size={20} color={theme.colors.grayDark}/>
...
