...

            <View style={styles.inputContainerIM}>
                <Ionicons name="location-sharp" size={16} color={theme.colors.primary} style={styles.iconIM}/>
                <TextInput
                    style={styles.inputIM}
                    value={destination}
                    placeholder="Destination"
                />
            </View>

        </View>
    );
};
...
