import React, {useContext, useEffect, useMemo, useState} from 'react';
import {Platform, StyleSheet, Text, TouchableOpacity, View} from 'react-native';
import PropTypes from "prop-types";
import {ThemeContext} from '@/context/ThemeProvider';

const MapButtons = ({onPress, onCampusChange}) => {
    const [selectedLocation, setSelectedLocation] = useState('SGW');
    const {theme, isDark} = useContext(ThemeContext);
    const styles = useMemo(() => createStyles(theme), [theme]);
    const locations = {
        SGW: [-73.5789, 45.4973],     // SGW Coordinates
        LOYOLA: [-73.6409, 45.4582]    // Loyola Coordinates
    };
...
                        style={[
                            styles.label,
                            selectedLocation === 'LOYOLA' &&
                            (isDark ? styles.activeLabelDark : styles.activeLabel)
                        ]}
                    >
                        Loyola
                    </Text>
                </TouchableOpacity>
                <TouchableOpacity
                    style={[styles.toggleButton, selectedLocation === 'SGW' && styles.activeButton]}
                    onPress={() => handlePress('SGW')}
                    testID={'sgw-button'}
...
