...
                </View>
            </View>

            <View style={styles.rightActions}>
                {!isPlanRouteMode && (
                    <TouchableOpacity testID={'plan-route-button'} style={styles.todayButton} onPress={onPlanRoute}>
                        <Text style={styles.todayText}>Plan Route</Text>
                    </TouchableOpacity>
                )}
                {!isPlanRouteMode && (
                    <TouchableOpacity testID={'add-task-button'} style={styles.addButton} onPress={onAddTask}>
                        <Ionicons name="add" size={28} color="white"/>
                    </TouchableOpacity>
...
