appId: com.aymanearfaoui.FindMyClass
---
- tapOn: "GET STARTED"
- tapOn:  Planner
- tapOn: 
- tapOn: Task Name
- inputText: Test
- tapOn: Enter Address
- inputText: Concordia
- tapOn:
    point: 41%,44%
- tapOn: return
- tapOn: Create Event
- tapOn: OK