appId: com.aymanearfaoui.FindMyClass
---
- tapOn: "GET STARTED"
- tapOn:
    point: "50%,50%"
- tapOn: " Get Directions"
- assertVisible: "Destination"
- tapOn:
    point: "38%,27%"
- tapOn:
    point: "91%,94%"