appId: com.aymanearfaoui.FindMyClass
---
- launchApp
- tapOn: "GET STARTED"
- assertVisible: "SGW"
- assertVisible: "Loyola"
