appId: com.aymanearfaoui.FindMyClass
---
- tapOn: GET STARTED
- tapOn:  Planner
- tapOn: Mon 7
- tapOn: Plan Route
- tapOn: 
- tapOn:
    point: 81%,42%
- tapOn:
    point: 81%,48%
- tapOn:
    point: 81%,53%